force-app/main/default/objects/Compensation__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>มูลค่าเป็นเงินของสิ่งที่ Compensate</description>
    <label>Amount (Cash/EMD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>