force-app/main/default/objects/Compensation__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Status of this approval request.</description>
    <formula>IMAGE(
If(Text(Status__c) == "Approved", 
"/resource/icon_case/Status_Approved.gif",
If(Text(Status__c) == "Rejected", 
"/resource/icon_case/Status_Rejected.gif",
IF(Text(Status__c) == "Pending",
"/resource/icon_case/Status_Pending.gif",
IF(Text(Status__c) == "Draft",
"/resource/icon_case/Status_Draft.gif",
IF(Text(Status__c) == "Obsolete",
"/resource/icon_case/Status_Obsolete.gif",
"/resource/icon_case/Status_New.gif")))))
,"",25,30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>