force-app/main/default/objects/Compensation__c/fields/Case_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Case_Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the case group member associated with this compensation.</description>
    <label>Case Group Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CaseId__c</field>
            <operation>equals</operation>
            <valueField>Case_Group_Member__c.Caseid__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Group_Member__c</referenceTo>
    <relationshipLabel>Compensations</relationshipLabel>
    <relationshipName>Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>