force-app/main/default/objects/Compensation__c/fields/Compensation_Account_Center__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Account_Center__c</fullName>
    <label>Compensation Account Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1030100</fullName>
            </value>
            <value>
                <fullName>1015519</fullName>
            </value>
            <value>
                <fullName>1301220</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>