force-app/main/default/objects/Compensation__c/fields/Compensation_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Account_Number__c</fullName>
    <label>Compensation Account Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Compensation_Account_Center__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>631070</fullName>
            </value>
            <value>
                <fullName>631071</fullName>
            </value>
            <value>
                <fullName>631080</fullName>
            </value>
            <value>
                <fullName>631130</fullName>
            </value>
            <value>
                <fullName>631140</fullName>
            </value>
            <value>
                <fullName>631150</fullName>
            </value>
            <value>
                <fullName>811106</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>