force-app/main/default/objects/Compensation__c/fields/Compensation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Detail__c</fullName>
    <description>Detail of the compensation.</description>
    <label>Compensation Detail</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>