force-app/main/default/objects/Compensation__c/fields/Compensation_Tools__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Tools__c</fullName>
    <label>Compensation Tools</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Compensation_Account_Number__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Complimentary Ticket</fullName>
            </value>
            <value>
                <fullName>Duty Free</fullName>
            </value>
            <value>
                <fullName>EMD</fullName>
            </value>
            <value>
                <fullName>Excess Baggage</fullName>
            </value>
            <value>
                <fullName>Gifts</fullName>
            </value>
            <value>
                <fullName>Lounge Access Voucher</fullName>
            </value>
            <value>
                <fullName>Mileage Compensation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Upgrading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>