force-app/main/default/objects/Compensation__c/fields/Compensation_Type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Type__c</fullName>
    <description>Displays the compensation tools</description>
    <label>Compensation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Baggage Damage</fullName>
            </value>
            <value>
                <fullName>Baggage Delay</fullName>
            </value>
            <value>
                <fullName>Baggage Loss</fullName>
            </value>
            <value>
                <fullName>Baggage Pilferage</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Check in Service</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Denied Boarding</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>EC261</fullName>
            </value>
            <value>
                <fullName>Food poisoning</fullName>
            </value>
            <value>
                <fullName>Foreign object</fullName>
            </value>
            <value>
                <fullName>Handling of Flight Irregularity</fullName>
            </value>
            <value>
                <fullName>IFE (in-flight entertainment) malfunction</fullName>
            </value>
            <value>
                <fullName>Inadmissible passenger</fullName>
            </value>
            <value>
                <fullName>In-Flight Service</fullName>
            </value>
            <value>
                <fullName>Injury before boarding/after/on arrival/Medical assistance</fullName>
            </value>
            <value>
                <fullName>Injury on Board</fullName>
            </value>
            <value>
                <fullName>Lounge</fullName>
            </value>
            <value>
                <fullName>Medical assistance</fullName>
            </value>
            <value>
                <fullName>On board Catering</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reservation Service</fullName>
            </value>
            <value>
                <fullName>Schedule Deviation</fullName>
            </value>
            <value>
                <fullName>Seat malfunction</fullName>
            </value>
            <value>
                <fullName>Special meal request</fullName>
            </value>
            <value>
                <fullName>Ticketing Service</fullName>
            </value>
            <value>
                <fullName>Web Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>