force-app/main/default/objects/Compensation__c/fields/From_Class__c.field-meta.xml
<CustomField>
    <fullName>From_Class__c</fullName>
    <label>From Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>