force-app/main/default/objects/Compensation__c/fields/From_Seat__c.field-meta.xml
<CustomField>
    <fullName>From_Seat__c</fullName>
    <label>From Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>