force-app/main/default/objects/Compensation__c/fields/Goodwill__c.field-meta.xml
<CustomField>
    <fullName>Goodwill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goodwill</label>
    <type>Checkbox</type>
</CustomField>