force-app/main/default/objects/Compensation__c/fields/Goodwill_Detail__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Detail__c</fullName>
    <label>Goodwill Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>