force-app/main/default/objects/Compensation__c/fields/Is_Individual__c.field-meta.xml
<CustomField>
    <fullName>Is_Individual__c</fullName>
    <description>Checks whether the compensation is meant for an individual</description>
    <formula>!ISBLANK(Case_Group_Member__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Individual</label>
    <type>Checkbox</type>
</CustomField>