force-app/main/default/objects/Compensation__c/fields/ISC_Form_No__c.field-meta.xml
<CustomField>
    <fullName>ISC_Form_No__c</fullName>
    <description>For In-flight compensation</description>
    <label>ISC Form No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>