force-app/main/default/objects/Compensation__c/fields/Item_Code_No__c.field-meta.xml
<CustomField>
    <fullName>Item_Code_No__c</fullName>
    <description>for in-flight compensation</description>
    <label>Item Code No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>