force-app/main/default/objects/Compensation__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <label>Liability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Act of Legislation 2015 for International Air Transportation</fullName>
            </value>
            <value>
                <fullName>EC261/2004</fullName>
            </value>
            <value>
                <fullName>Local Laws</fullName>
            </value>
            <value>
                <fullName>MC99 (The Montreal Convention)</fullName>
            </value>
            <value>
                <fullName>US Laws</fullName>
            </value>
            <value>
                <fullName>Warsaw Convention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>