force-app/main/default/objects/Compensation__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <description>Name of the passenger.</description>
    <formula>Case_Group_Member__r.Passengerid__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passenger Name</label>
    <type>Text</type>
</CustomField>