force-app/main/default/objects/Compensation__c/fields/Passenger_Number__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Number__c</fullName>
    <formula>CaseId__r.Effect_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passenger Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>