force-app/main/default/objects/Compensation__c/fields/PassengerId__c.field-meta.xml
<CustomField>
    <fullName>PassengerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the passenger associated with this compensation.</description>
    <label>Passenger</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Compensations</relationshipLabel>
    <relationshipName>Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>