force-app/main/default/objects/Compensation__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>