force-app/main/default/objects/Compensation__c/fields/ROE__c.field-meta.xml
<CustomField>
    <fullName>ROE__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rate of exchange</description>
    <label>ROE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>