force-app/main/default/objects/Compensation__c/fields/ROE_US_Dollars__c.field-meta.xml
<CustomField>
    <fullName>ROE_US_Dollars__c</fullName>
    <description>Rate of exchange (USD)</description>
    <label>ROE (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>