force-app/main/default/objects/Compensation__c/fields/To_Class__c.field-meta.xml
<CustomField>
    <fullName>To_Class__c</fullName>
    <label>To Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>