force-app/main/default/objects/Compensation__c/fields/To_Seat__c.field-meta.xml
<CustomField>
    <fullName>To_Seat__c</fullName>
    <label>To Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>