force-app/main/default/objects/Compensation__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>จำนวนของสิ่งที่ Compensate</description>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>