force-app/main/default/objects/Compensation__c/fields/Total_Amount_Cash_EMD__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Cash_EMD__c</fullName>
    <formula>IF(
 Is_Individual__c ,
 Amount__c ,
 Amount__c * CaseId__r.SUM_Involved_Passenger_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Cash/EMD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>