force-app/main/default/objects/Compensation__c/fields/Total_Amount_THB__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_THB__c</fullName>
    <formula>IF( ROE__c > 0 &amp;&amp; Total_Amount_Cash_EMD__c > 0 , Total_Amount_Cash_EMD__c * ROE__c , Total_Amount_Cash_EMD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (THB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>