force-app/main/default/objects/Compensation__c/fields/Total_THB__c.field-meta.xml
<CustomField>
    <fullName>Total_THB__c</fullName>
    <formula>IF( ROE__c > 0 &amp;&amp;  Amount__c > 0 , Amount__c * ROE__c ,  Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (THB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>