force-app/main/default/objects/Compensation__c/fields/Total_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_USD__c</fullName>
    <formula>IF( ROE_US_Dollars__c  > 0 &amp;&amp; Amount__c > 0 , Amount__c *  ROE_US_Dollars__c  , Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>