force-app/main/default/objects/Compensation__c/fields/TotalTotal_sum_of_CGM__c.field-meta.xml
<CustomField>
    <fullName>TotalTotal_sum_of_CGM__c</fullName>
    <formula>IF(
Is_Individual__c ,
Total__c ,
Total__c * CaseId__r.SUM_Involved_Passenger_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>