force-app/main/default/objects/Compensation__c/fields/Type_of_Irregularity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Irregularity__c</fullName>
    <label>Type of Irregularity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>