force-app/main/default/objects/Compensation__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Displays the unit of the compensation</description>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Kilogramme</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
            <value>
                <fullName>Sector</fullName>
            </value>
            <value>
                <fullName>Ticket</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>