force-app/main/default/objects/Compensation__c/fields/UpgradeCertificate__c.field-meta.xml
<CustomField>
    <fullName>UpgradeCertificate__c</fullName>
    <description>for in-flight compensation</description>
    <label>Upgrade Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stand-by Upgrade Certificate</fullName>
            </value>
            <value>
                <fullName>Confirmed Upgrade Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>