force-app/main/default/objects/Compensation__c/recordTypes/CFMS_Compensation.recordType-meta.xml
<RecordType>
    <fullName>CFMS_Compensation</fullName>
    <active>true</active>
    <label>CFMS Compensation</label>
</RecordType>