force-app/main/default/objects/Compensation__c/recordTypes/CFMS_Compensation_Final.recordType-meta.xml
<RecordType>
    <fullName>CFMS_Compensation_Final</fullName>
    <active>true</active>
    <label>CFMS Compensation Final</label>
</RecordType>