force-app/main/default/objects/Compensation__c/recordTypes/GS_Compensation.recordType-meta.xml
<RecordType>
    <fullName>GS_Compensation</fullName>
    <active>true</active>
    <label>GS Compensation</label>
</RecordType>