force-app/main/default/objects/Compensation__c/recordTypes/In_flight_Compensation.recordType-meta.xml
<RecordType>
    <fullName>In_flight_Compensation</fullName>
    <active>true</active>
    <description>for in-flight compensation</description>
    <label>In-flight Compensation</label>
</RecordType>