force-app/main/default/objects/Compensation__c/recordTypes/SD_SR_Compensation.recordType-meta.xml
<RecordType>
    <fullName>SD_SR_Compensation</fullName>
    <active>true</active>
    <description>Compensation for SD/SR (non BKK)</description>
    <label>SD/SR Compensation</label>
</RecordType>