force-app/main/default/objects/Compensation__c/recordTypes/SD_SR_Compensation_Final.recordType-meta.xml
<RecordType>
    <fullName>SD_SR_Compensation_Final</fullName>
    <active>true</active>
    <description>Compensation for SD/SR - Final (non BKK)</description>
    <label>SD/SR Compensation Final</label>
</RecordType>