force-app/main/default/objects/Compensation__c/validationRules/ROE_USD.validationRule-meta.xml
<ValidationRule>
    <fullName>ROE_USD</fullName>
    <active>true</active>
    <description>Validation Rule for ROE</description>
    <errorConditionFormula>AND( 
OR($Profile.Name &lt;> "Ground Customer Service") 

, 
OR($Profile.Name &lt;> "Ground Customer Service Not BKK") 

,
OR(RecordType.Name == "SD/SR Compensation", 
RecordType.Name == "SD/SR Compensation Final") 
, 
OR(Ispickval(Compensation_Tools__c , "Cash"), 
Ispickval(Compensation_Tools__c , "EMD")) 
, 
OR( 
NOT(Ispickval(Currency__c , "USD")), 
ISBLANK(TEXT(Currency__c))) 
, 
OR( ROE_US_Dollars__c  &lt;= 0, ISBLANK( ROE_US_Dollars__c )))</errorConditionFormula>
    <errorDisplayField>ROE_US_Dollars__c</errorDisplayField>
    <errorMessage>ROE (USD) is mandatory</errorMessage>
</ValidationRule>