force-app/main/default/objects/Compensation__c/validationRules/Validate_Approved_Status_OnCeate.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Approved_Status_OnCeate</fullName>
    <active>true</active>
    <errorConditionFormula>(  RecordType.DeveloperName == 'CFMS_Compensation' || RecordType.DeveloperName == 'SD_SR_Compensation') &amp;&amp; ISNEW() &amp;&amp; ISPICKVAL(Status__c , 'Approved' )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot create new compensation with Approved status</errorMessage>
</ValidationRule>