force-app/main/default/objects/Compensation__c/validationRules/Validate_total.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_total</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISPICKVAL(Compensation_Tools__c,'Cash')), NOT(ISPICKVAL(Compensation_Tools__c,'EMD')), 
OR( Total__c == 0,ISBLANK(Total__c )), 
OR($User.Department == 'S4', $User.Department = 'S3', $User.Department = 'AO')
)</errorConditionFormula>
    <errorDisplayField>Total__c</errorDisplayField>
    <errorMessage>Please identify Total if compensation tool is not 'Cash' or 'EMD'.</errorMessage>
</ValidationRule>